# ThunderdriveModel_Plugin

./: .gitignore  CMakeLists.txt  Thunderdrive.circuitjs.txt
data/: Thunderdrive.m  ThunderdriveData.xlsx
inc/: RingBuffer.h  SimpleFilter.h  SimpleFilterIf.h  ThunderdriveProcessor.h
src/: CMakeLists.txt  Main.cpp  MainComponent.cpp  MainComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SimpleFilter.cpp  SimpleFilterIf.cpp  ThunderdriveProcessor.cpp  ThunderdriveProcessor.h
src/DiodeClipper/: CMakeLists.txt  DiodeClipper.cpp
src/DiodeClipper/include/: DiodeClipper.h
src/SimpleFilter/: CMakeLists.txt  SimpleFilter.cpp  SimpleFilterIf.cpp
src/SimpleFilter/include/: SimpleFilter.h  SimpleFilterIf.h
src/ThunderdriveProcessor/: CMakeLists.txt  ThunderdriveProcessor.cpp
src/ThunderdriveProcessor/include/: ThunderdriveProcessor.h
src/include/: PluginEditor.h  PluginProcessor.h
src/testing/: Synthesis.h  testSimpleFilter.cpp  testThunderdriveProcessor.cpp
test/: CMakeLists.txt  testSimpleFilter.cpp  testThunderdriveProcessor.cpp
